--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,63 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
+@config '../tailwind.config.ts';
+
+
+@plugin "daisyui" {
+  themes: light, dark --default --prefersdark, black;
+};
+
+@plugin "daisyui/theme" {
+  name: "light";
+  
+  --color-primary: var(--color-violet-700);
+  --color-secondary: var(--color-blue-500);
+  --color-accent: var(--color-teal-500);
+};
+
+@plugin "daisyui/theme" {
+  name: "dark";
+  
+  --color-primary: var(--color-violet-700);
+  --color-secondary: var(--color-blue-500);
+  --color-accent: var(--color-teal-500);
+  --color-base-100: var(--color-gray-950);
+  --color-base-200: var(--color-gray-900);
+  --color-base-300: var(--color-gray-800);
+};
+
+@plugin "daisyui/theme" {
+  name: "black";
+  
+  --color-primary: var(--color-violet-700);
+  --color-secondary: var(--color-blue-500);
+  --color-accent: var(--color-teal-500);
+  --radius-selector: 0.5rem;
+  --radius-field: 0.25rem;
+  --radius-box: 0.5rem;
+  --size-selector: 0.25rem;
+  --size-field: 0.25rem;
+  --border: 1px;
+  --depth: 1;
+  --noise: 0;
+};
+
+/*
+  The default border color has changed to `currentColor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+@layer base {
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--color-gray-200, currentColor);
+  }
+}
 
 html,
 body {
